[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/gui/bars/hb_02a.png" type="Texture" id=1]
[ext_resource path="res://interface/gui/bars/hb_02c.png" type="Texture" id=2]
[ext_resource path="res://interface/theme/fonts/source_code_pro_14.tres" type="DynamicFont" id=3]
[ext_resource path="res://core/world/weather/WeatherHUD.gd" type="Script" id=4]

[node name="WeatherHUD" type="Control"]
rect_min_size = Vector2( 85, 50 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.00001
margin_bottom = -25.0
rect_min_size = Vector2( 85, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thermometer" type="TextureProgress" parent="HBoxContainer"]
margin_right = 20.0
margin_bottom = 56.0
rect_min_size = Vector2( 20, 50 )
min_value = -40.0
max_value = 120.0
value = 75.0
rounded = true
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 5
stretch_margin_top = 5
stretch_margin_right = 5
stretch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 24.0
margin_right = 72.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeatherReadout" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_right = 48.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 3 )
text = "Stormy"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TempReadout" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 48.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 3 )
text = "75Â°"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="." to="." method="_on_WeatherHUD_mouse_entered"]
